--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="/Web_Design/article">Article</a></li>
     <li><a href="/Web_Design/aware">Aware</a></li>
-    <li><a href="/Web_Design/hotel">hotel</a></li>
+    <li><a href="/Web_Design/hotel">반응형_hotel</a></li>
     <li><a href="/Web_Design/nike">nike</a></li>
   </ul>
 </body>
