--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="/Web_Design/aware">Aware</a></li>
     <li><a href="/Web_Design/hotel">반응형_hotel</a></li>
     <li><a href="/Web_Design/nike">nike</a></li>
+    <li><a href="/Web_Design/BeerBear/html/beerWarningApp.html">BeerBear</a></li>
   </ul>
 </body>
 </html>
