--- a/hotel/index.html
+++ b/hotel/index.html
@@ -7,7 +7,7 @@
     <!--뷰포트메타태그-->
 	<meta name="viewport" content="width=divice-width,initial-scale=1.0">
 	<!--부트스트랩아이콘-->
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <link rel="stylesheet" href="css/hotel.css">
 	
 
